# load_distribution

./: CMakeLists.txt  README.md  load_distribution.pro  main.cpp
Debug/: Makefile  membrane.bash  p.csv  slae.csv  slae_no_solution.csv  string_load_distribution  u.csv  u0.csv  u0_u.ps  x_p.ps
Debug/string_example/: string.bash  x_p.ps  x_u.csv
Debug/tests/: matrix_matlab.csv  solution_matlab.csv
back/: u0_1.ps  u0_2.ps
back/string_example/: u0_u.ps  x_p.csv  x_u0.csv
back/tests/: b_matlab.csv
fail/: u0_u_my-Gauss.ps  x_p_my-Gauss.ps
include/: functions.h  functions_back_29.03.23:22.00.00.h  log_duration.h  membrane_load_distribution.h  string_load_distribution.h  test_framework.h  tests.h  write.h
src/: functions.cpp  membrane_load_distribution.cpp  string_load_distribution.cpp  tests.cpp
без отступа/: u0_u.ps  x_p.ps
отступ/: u0_u.ps  x_p.ps
